--- a/src/app/contentserver/views/login-register.html
+++ b/src/app/contentserver/views/login-register.html
@@ -20,6 +20,14 @@
             <input type="submit" value="register">
         </form>
     </div>
+    <h1>Fast Register</h1>
+    <div>
+        <form action="/fast_register" method="POST" class="fast_register">
+            <input type="text" name="email" placeholder="email">
+            <input type="text" name="companyName" placeholder="company name">
+            <input type="submit" value="fast register">
+        </form>
+    </div>
 </body>
 
 </html>
